--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,8 @@
 FROM oven/bun:latest
 
+RUN apt update
+RUN apt install -y openssh-client
+
 COPY package.json /workspace/package.json
 COPY bun.lockb /workspace/bun.lockb
 COPY src /workspace/src
