--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun --watch run src/index.ts"
+    "start": "bun --watch run src/index.ts",
+    "format": "bunx biome format --write ./src",
+    "lint": "bunx biome lint --write ./src",
+    "check": "bunx biome check --write ./src"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@types/bun": "^1.1.14",
     "bun-types": "latest"
   },
   "peerDependencies": {
