--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.2",
+    "@graphql-tools/graphql-file-loader": "^8.0.12",
+    "@graphql-tools/load": "^8.0.12",
+    "@graphql-tools/schema": "^10.0.16",
     "graphql": "^16.9.0"
   }
 }
