--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "bun --watch run src/index.ts",
     "format": "bunx biome format --write ./src",
     "lint": "bunx biome lint --write ./src",
-    "check": "bunx biome check --write ./src"
+    "check": "bunx biome check --write ./src",
+    "codegen": "bun graphql-codegen"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@graphql-codegen/cli": "^5.0.4",
+    "@graphql-codegen/typescript": "^4.1.3",
+    "@graphql-codegen/typescript-resolvers": "^4.4.2",
     "@types/bun": "^1.1.14",
     "bun-types": "latest"
   },
