--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "type": "module",
   "scripts": {
     "start": "bun --watch run src/index.ts",
-    "format": "bunx biome format --write ./src",
-    "lint": "bunx biome lint --write ./src",
-    "check": "bunx biome check --write ./src",
-    "codegen": "bun graphql-codegen"
+    "format": "bun biome format --write ./src",
+    "lint": "bun biome lint --write ./src",
+    "check": "bun biome check --write ./src",
+    "codegen": "bun graphql-codegen",
+    "codegen-watch": "bun graphql-codegen --watch"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@graphql-codegen/cli": "^5.0.4",
     "@graphql-codegen/typescript": "^4.1.3",
     "@graphql-codegen/typescript-resolvers": "^4.4.2",
+    "@parcel/watcher": "^2.5.1",
     "@types/bun": "^1.1.14",
     "bun-types": "latest"
   },
