--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["**/generated/**"]
+    "ignore": ["*.generated.*.ts"]
   },
   "formatter": {
     "enabled": true,
