--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@graphql-tools/graphql-file-loader": "^8.0.12",
     "@graphql-tools/load": "^8.0.12",
     "@graphql-tools/schema": "^10.0.16",
-    "graphql": "^16.9.0"
+    "graphql": "^16.9.0",
+    "graphql-scalars": "^1.24.1"
   }
 }
