--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@graphql-codegen/cli": "^5.0.4",
-    "@graphql-codegen/typescript": "^4.1.3",
-    "@graphql-codegen/typescript-resolvers": "^4.4.2",
+    "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/typescript": "^4.1.4",
+    "@graphql-codegen/typescript-resolvers": "^4.4.3",
     "@parcel/watcher": "^2.5.1",
-    "@types/bun": "^1.1.14",
+    "@types/bun": "^1.2.2",
+    "@types/cors": "^2.8.17",
     "bun-types": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@apollo/server": "^4.11.2",
-    "@graphql-tools/graphql-file-loader": "^8.0.12",
-    "@graphql-tools/load": "^8.0.12",
-    "@graphql-tools/schema": "^10.0.16",
-    "graphql": "^16.9.0",
-    "graphql-scalars": "^1.24.1"
+    "@apollo/server": "^4.11.3",
+    "@graphql-tools/graphql-file-loader": "^8.0.14",
+    "@graphql-tools/load": "^8.0.14",
+    "@graphql-tools/schema": "^10.0.18",
+    "cors": "^2.8.5",
+    "graphql": "^16.10.0",
+    "graphql-scalars": "^1.24.1",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.4",
+    "ws": "^8.18.0"
   }
 }
