--- a/.devcontainer/frontend-devcontainer/devcontainer.json
+++ b/.devcontainer/frontend-devcontainer/devcontainer.json
@@ -1,10 +1,11 @@
 {
-  "name": "Dev Container for Frontend App with Bun",
+  "name": "Dev Container for Frontend",
   "dockerComposeFile": "../docker-compose.yml",
   "service": "frontend",
-  "workspaceFolder": "/workspace",
+  "workspaceFolder": "/workspace/frontend",
   "features": {
-    "ghcr.io/devcontainers/features/git:1": {}
+    "ghcr.io/devcontainers/features/git:1": {},
+    "ghcr.io/devcontainers-extra/features/curl-apt-get:1": {}
   },
   "customizations": {
     "vscode": {
