--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -30,6 +30,9 @@
       ],
       "@components/*": [
         "./src/components/*"
+      ],
+      "@gql/*": [
+        "./src/gql/*"
       ]
     }
   },
