chore: DevContainerの拡張追加

--- a/.devcontainer/frontend-devcontainer/devcontainer.json
+++ b/.devcontainer/frontend-devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
         "ms-vscode.vscode-typescript-next",
         "graphql.vscode-graphql-syntax",
         "oven.bun-vscode",
-        "biomejs.biome"
+        "biomejs.biome",
+        "graphql.vscode-graphql"
       ]
     }
   }
