--- a/.devcontainer/backend-devcontainer/devcontainer.json
+++ b/.devcontainer/backend-devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
         "ms-vscode.vscode-typescript-next",
         "graphql.vscode-graphql-syntax",
         "oven.bun-vscode",
-        "biomejs.biome"
+        "biomejs.biome",
+        "graphql.vscode-graphql"
       ]
     }
   }
