--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@apollo/client": "^3.13.1",
     "@tailwindcss/vite": "^4.0.9",
     "graphql": "^16.10.0",
+    "graphql-ws": "^6.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.9"
