chore: tailwind開発用の拡張追加

--- a/.devcontainer/frontend-devcontainer/devcontainer.json
+++ b/.devcontainer/frontend-devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
         "graphql.vscode-graphql-syntax",
         "oven.bun-vscode",
         "biomejs.biome",
-        "graphql.vscode-graphql"
+        "graphql.vscode-graphql",
+        "bradlc.vscode-tailwindcss"
       ]
     }
   }
