--- a/.devcontainer/backend-devcontainer/Dockerfile
+++ b/.devcontainer/backend-devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM oven/bun:latest
+FROM imbios/bun-node:latest-current-slim
 
 RUN apt update
 RUN apt install -y openssh-client
@@ -9,3 +9,5 @@ COPY backend/bun.lockb /workspace/backend/bun.lockb
 WORKDIR /workspace/backend
 
 RUN bun install
+
+CMD ["sh", "-c", "bun db:dev"]
