--- a/.devcontainer/backend-devcontainer/devcontainer.json
+++ b/.devcontainer/backend-devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
         "graphql.vscode-graphql-syntax",
         "oven.bun-vscode",
         "biomejs.biome",
-        "graphql.vscode-graphql"
+        "graphql.vscode-graphql",
+        "prisma.prisma"
       ]
     }
   }
