feat: Prismaを利用してデータソースをPostgresにする

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -24,9 +24,18 @@
       "@/*": [
         "./src/*"
       ],
+      "@repositories/*": [
+        "./src/repositories/*"
+      ],
+      "@usecases/*": [
+        "./src/usecases/*"
+      ],
       "@resolvers/*": [
         "./src/resolvers/*"
       ],
+      "@generated/client": [
+        "./src/generated/client"
+      ]
     }
   }
 }
