--- a/backend/biome.json
+++ b/backend/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["*.generated.*.ts"]
+    "ignore": ["*.generated.*.ts", "**/generated/**"]
   },
   "formatter": {
     "enabled": true,
