--- a/backend/package.json
+++ b/backend/package.json
@@ -8,31 +8,40 @@
     "lint": "bun biome lint --write ./src",
     "check": "bun biome check --write ./src",
     "codegen": "bun graphql-codegen",
-    "codegen-watch": "bun graphql-codegen --watch"
+    "codegen-watch": "bun graphql-codegen --watch",
+    "db:dev": "bunx prisma migrate dev",
+    "db:deploy": "bunx prisma migrate deploy && bunx prisma generate",
+    "db:studio": "bunx prisma studio",
+    "db:seed": "bunx prisma db seed"
+  },
+  "prisma": {
+    "seed": "bun run prisma/seed.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@graphql-codegen/cli": "^5.0.5",
-    "@graphql-codegen/typescript": "^4.1.4",
-    "@graphql-codegen/typescript-resolvers": "^4.4.3",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-resolvers": "^4.5.0",
     "@parcel/watcher": "^2.5.1",
-    "@types/bun": "^1.2.2",
+    "@prisma/client": "^6.5.0",
+    "@types/bun": "^1.2.8",
     "@types/cors": "^2.8.17",
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "prisma": "^6.5.0"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@apollo/server": "^4.11.3",
-    "@graphql-tools/graphql-file-loader": "^8.0.14",
-    "@graphql-tools/load": "^8.0.14",
-    "@graphql-tools/schema": "^10.0.18",
+    "@apollo/server": "^4.12.0",
+    "@graphql-tools/graphql-file-loader": "^8.0.19",
+    "@graphql-tools/load": "^8.0.19",
+    "@graphql-tools/schema": "^10.0.23",
     "cors": "^2.8.5",
     "graphql": "^16.10.0",
-    "graphql-scalars": "^1.24.1",
+    "graphql-scalars": "^1.24.2",
     "graphql-subscriptions": "^3.0.0",
     "graphql-ws": "^6.0.4",
-    "ws": "^8.18.0"
+    "ws": "^8.18.1"
   }
 }
